sfSandBoxCode/force-app/main/default/objects/Consumer_Profile__c/Consumer_Profile__c.object-meta.xml
<CustomObject>
    <description>Profile of Fresh Life user</description>
    <label>Consumer Profile</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0}</displayFormat>
        <label>Consumer Profile Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consumer Profiles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>