sfSandBoxCode/force-app/main/default/objects/Consumer_Profile__c/fields/Access_to_healthcare__c.field-meta.xml
<CustomField>
    <fullName>Access_to_healthcare__c</fullName>
    <label>Access to healthcare</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Level 1: Self-medication, home care, herbalists, TBA</fullName>
            </value>
            <value>
                <fullName>Level 2: Public hospital, small private clinics</fullName>
            </value>
            <value>
                <fullName>Level 3: Private hospital or has medical insurance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>