sfSandBoxCode/force-app/main/default/objects/Consumer_Profile__c/fields/Approximate_household_daily_income__c.field-meta.xml
<CustomField>
    <fullName>Approximate_household_daily_income__c</fullName>
    <label>Approximate household daily income</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Level 1: Less than 100 Kshs per day</fullName>
            </value>
            <value>
                <fullName>Level 2: 100 – 499 Kshs per day</fullName>
            </value>
            <value>
                <fullName>Level 3: 500 Kshs and above</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>