sfSandBoxCode/force-app/main/default/objects/Consumer_Profile__c/fields/Asset_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Asset_Ownership__c</fullName>
    <label>Asset Ownership</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Level 1: Ordinary/simple seats, no TV,</fullName>
            </value>
            <value>
                <fullName>Level 2: Colored TV[ Flat screen or 21”], music system, sofa seats</fullName>
            </value>
            <value>
                <fullName>Level 3: All above plus Car, Plots/Landlord</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>