sfSandBoxCode/force-app/main/default/objects/Consumer_Profile__c/fields/Closer_toilet_exists__c.field-meta.xml
<CustomField>
    <fullName>Closer_toilet_exists__c</fullName>
    <label>Is there a closer toilet to home/work</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>