sfSandBoxCode/force-app/main/default/objects/Consumer_Profile__c/fields/Distance_to_toilet__c.field-meta.xml
<CustomField>
    <fullName>Distance_to_toilet__c</fullName>
    <label>Distance to toilet from home/work/school</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0 - 20 meters</fullName>
            </value>
            <value>
                <fullName>20 - 50 meters</fullName>
            </value>
            <value>
                <fullName>50 – 100 meters</fullName>
            </value>
            <value>
                <fullName>Over 100 meters</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>