sfSandBoxCode/force-app/main/default/objects/Consumer_Profile__c/fields/Fee_compare__c.field-meta.xml
<CustomField>
    <fullName>Fee_compare__c</fullName>
    <label>Comparison of usage fee to other toilets</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Same</fullName>
            </value>
            <value>
                <fullName>Cheaper</fullName>
            </value>
            <value>
                <fullName>More expensive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>