sfSandBoxCode/force-app/main/default/objects/Consumer_Profile__c/fields/FLT_comparison__c.field-meta.xml
<CustomField>
    <fullName>FLT_comparison__c</fullName>
    <label>How does FLT compare with other toilets</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Better quality &amp; service</fullName>
            </value>
            <value>
                <fullName>Same standards</fullName>
            </value>
            <value>
                <fullName>Poor quality</fullName>
            </value>
            <value>
                <fullName>Difficult to use</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>