sfSandBoxCode/force-app/main/default/objects/Consumer_Profile__c/fields/FLT_Usage_Frequency__c.field-meta.xml
<CustomField>
    <fullName>FLT_Usage_Frequency__c</fullName>
    <label>How often do they use FLT</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2-3 times a week</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>More than once daily</fullName>
            </value>
            <value>
                <fullName>Once in while</fullName>
            </value>
            <value>
                <fullName>Rarely</fullName>
            </value>
            <value>
                <fullName>Weekends only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>