sfSandBoxCode/force-app/main/default/objects/Consumer_Profile__c/fields/Garbage_disposal_method__c.field-meta.xml
<CustomField>
    <fullName>Garbage_disposal_method__c</fullName>
    <label>Garbage disposal method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Level 1: Scattering</fullName>
            </value>
            <value>
                <fullName>Level 2: Taking dump site</fullName>
            </value>
            <value>
                <fullName>Level 3: Paid garbage service [youth groups…]</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>