sfSandBoxCode/force-app/main/default/objects/Consumer_Profile__c/fields/Hear_about_FLT__c.field-meta.xml
<CustomField>
    <fullName>Hear_about_FLT__c</fullName>
    <label>How did they hear about this FLT</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Saw poster /sign</fullName>
            </value>
            <value>
                <fullName>Opening Ceremony</fullName>
            </value>
            <value>
                <fullName>Told by someone</fullName>
            </value>
            <value>
                <fullName>Saw Toilet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>