sfSandBoxCode/force-app/main/default/objects/Consumer_Profile__c/fields/Housing_Level__c.field-meta.xml
<CustomField>
    <fullName>Housing_Level__c</fullName>
    <label>Housing Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Level 1: Temporary [No foundation, earthen floor]-No electricity</fullName>
            </value>
            <value>
                <fullName>Level 2: Semi permanent [Iron sheet, permanent floor, Electricity]</fullName>
            </value>
            <value>
                <fullName>Level 3: Permanent/block house</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>