sfSandBoxCode/force-app/main/default/objects/Consumer_Profile__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Consumer Profiles</relationshipLabel>
    <relationshipName>Consumer_Profiles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>