sfSandBoxCode/force-app/main/default/objects/Consumer_Profile__c/fields/Location_of_residence__c.field-meta.xml
<CustomField>
    <fullName>Location_of_residence__c</fullName>
    <description>Location of the consumer&#39;s residence</description>
    <label>Location of residence</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lives nearby</fullName>
            </value>
            <value>
                <fullName>Lives in a different location</fullName>
            </value>
            <value>
                <fullName>Passes by on way to work/school</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>