sfSandBoxCode/force-app/main/default/objects/Consumer_Profile__c/fields/Main_attraction_to_FLO__c.field-meta.xml
<CustomField>
    <fullName>Main_attraction_to_FLO__c</fullName>
    <label>Main attraction to FLO</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Attitude</fullName>
            </value>
            <value>
                <fullName>Friendliness</fullName>
            </value>
            <value>
                <fullName>Customer care</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>