sfSandBoxCode/force-app/main/default/objects/Consumer_Profile__c/fields/Main_source_of_livelihood__c.field-meta.xml
<CustomField>
    <fullName>Main_source_of_livelihood__c</fullName>
    <label>Main source of livelihood</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Level 1: Unemployed, temporary contracts</fullName>
            </value>
            <value>
                <fullName>Level 2: Self-employed, small business, casual laborer</fullName>
            </value>
            <value>
                <fullName>Level 3: Permanent employment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>