sfSandBoxCode/force-app/main/default/objects/Consumer_Profile__c/fields/Meals_per_day__c.field-meta.xml
<CustomField>
    <fullName>Meals_per_day__c</fullName>
    <label>Meals per day</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Level 1: 1 meal or less per day</fullName>
            </value>
            <value>
                <fullName>Level 2: 2 meals per day</fullName>
            </value>
            <value>
                <fullName>Level 3: 3 meals or more per day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>