sfSandBoxCode/force-app/main/default/objects/Consumer_Profile__c/fields/Nighttime_toilet_usage_prior_to_FLT__c.field-meta.xml
<CustomField>
    <fullName>Nighttime_toilet_usage_prior_to_FLT__c</fullName>
    <label>Nighttime toilet usage prior to FLT</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Flying Toilet</fullName>
            </value>
            <value>
                <fullName>Plot/workplace</fullName>
            </value>
            <value>
                <fullName>Neighboring plot</fullName>
            </value>
            <value>
                <fullName>Commercial Latrine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>