sfSandBoxCode/force-app/main/default/objects/Consumer_Profile__c/fields/Nighttime_toilet_usage_when_FLT_closed__c.field-meta.xml
<CustomField>
    <fullName>Nighttime_toilet_usage_when_FLT_closed__c</fullName>
    <label>Nighttime toilet usage when FLT closed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Flying Toilet</fullName>
            </value>
            <value>
                <fullName>Other Commercial Latrine</fullName>
            </value>
            <value>
                <fullName>Neighboring plot latrine</fullName>
            </value>
            <value>
                <fullName>Plot Latrine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>