sfSandBoxCode/force-app/main/default/objects/Consumer_Profile__c/fields/Other_compare__c.field-meta.xml
<CustomField>
    <fullName>Other_compare__c</fullName>
    <label>Other comparison to FLT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>