sfSandBoxCode/force-app/main/default/objects/Consumer_Profile__c/fields/Other_FLTs_used__c.field-meta.xml
<CustomField>
    <fullName>Other_FLTs_used__c</fullName>
    <label>Other FLTs used</label>
    <type>TextArea</type>
</CustomField>