sfSandBoxCode/force-app/main/default/objects/Consumer_Profile__c/fields/Other_not_use_closer_toilet__c.field-meta.xml
<CustomField>
    <fullName>Other_not_use_closer_toilet__c</fullName>
    <label>Other reason for not using closer toilet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>