sfSandBoxCode/force-app/main/default/objects/Consumer_Profile__c/fields/Other_why_use_FLT__c.field-meta.xml
<CustomField>
    <fullName>Other_why_use_FLT__c</fullName>
    <label>Other reason why prefer to use this FLT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>