sfSandBoxCode/force-app/main/default/objects/Consumer_Profile__c/fields/Prior_relationship_with_FLO__c.field-meta.xml
<CustomField>
    <fullName>Prior_relationship_with_FLO__c</fullName>
    <label>Prior relationship with FLO</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>