sfSandBoxCode/force-app/main/default/objects/Consumer_Profile__c/fields/Rent_for_home__c.field-meta.xml
<CustomField>
    <fullName>Rent_for_home__c</fullName>
    <label>Rent for home</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Level 1: Less than 1000 Kshs.</fullName>
            </value>
            <value>
                <fullName>Level 2: 1,000 – 2,000 Kshs per month</fullName>
            </value>
            <value>
                <fullName>Level 3: 2000 and above or owns the house</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>