sfSandBoxCode/force-app/main/default/objects/Consumer_Profile__c/fields/Time_to_toilet__c.field-meta.xml
<CustomField>
    <fullName>Time_to_toilet__c</fullName>
    <label>Time taken to walk to toilet</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>