sfSandBoxCode/force-app/main/default/objects/Consumer_Profile__c/fields/Type_of_business__c.field-meta.xml
<CustomField>
    <fullName>Type_of_business__c</fullName>
    <label>Type of business</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Level 1: Small roadside business/none</fullName>
            </value>
            <value>
                <fullName>Level 2: Medium size business, water vendor</fullName>
            </value>
            <value>
                <fullName>Level 3: Wholesale/Big retail shop, electricity vendor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>