sfSandBoxCode/force-app/main/default/objects/Consumer_Profile__c/fields/Usage_since__c.field-meta.xml
<CustomField>
    <fullName>Usage_since__c</fullName>
    <label>How long have they been using FLT</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>First timer</fullName>
            </value>
            <value>
                <fullName>Over one month</fullName>
            </value>
            <value>
                <fullName>Less than 1 month</fullName>
            </value>
            <value>
                <fullName>Since opening</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>