sfSandBoxCode/force-app/main/default/objects/Consumer_Profile__c/fields/Used_other_FLTs__c.field-meta.xml
<CustomField>
    <fullName>Used_other_FLTs__c</fullName>
    <label>Used other FLTs?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>