sfSandBoxCode/force-app/main/default/objects/Consumer_Profile__c/fields/Why_not_use_closer_toilet__c.field-meta.xml
<CustomField>
    <fullName>Why_not_use_closer_toilet__c</fullName>
    <label>Why is closer toilet not being used</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bad Owner</fullName>
            </value>
            <value>
                <fullName>Dirty</fullName>
            </value>
            <value>
                <fullName>More Expensive</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>