sfSandBoxCode/force-app/main/default/objects/Consumer_Profile__c/fields/Why_use_FLT__c.field-meta.xml
<CustomField>
    <fullName>Why_use_FLT__c</fullName>
    <label>Reasons for using the particular FLT</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Near to house</fullName>
            </value>
            <value>
                <fullName>On the way</fullName>
            </value>
            <value>
                <fullName>Near to workplace/sch.</fullName>
            </value>
            <value>
                <fullName>Cleanliness</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>